java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint4.pass
/*
 * ImplementAbstractMethod1.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;

import java.awt.event.MouseListener;
import java.beans.PropertyChangeListener;
import java.io.IOException;
import javax.swing.text.BadLocationException;

/**
 *
 * @author lahvac
 */
public class ImplementAbstractMethods4 extends AbstractClass2 {
    
    /** Creates a new instance of ImplementAbstractMethod1 */
    public ImplementAbstractMethods4() {
    }
    @Override
    public String[] test(int[] x, String[] y, String... args) throws IOException, BadLocationException {
        throw new UnsupportedOperationException("Not supported yet.");
    }
    
}
